# kibune

./: .env.sample  .pre-commit-config.yaml  README.md  default.Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
diagrams/: overview.py
kibune/: main.py  utils.py
kibune/api/: dependencies.py
kibune/api/v1/: api.py
kibune/arq/: constants.py  settings.py  tasks.py  worker.py
kibune/core/: datastructures.py  events.py  settings.py
kibune/crud/: __init__.py  base.py  crud_emitter.py  crud_log.py  crud_rule.py
kibune/database/: base.py  session.py  setup.py
kibune/factories/: __init__.py  log.py
kibune/models/: __init__.py  base.py  emitter.py  log.py  rule.py  utils.py
kibune/pysigma/: __init__.py  parser.py  pysigma.py  rules.py  sigma_scan.py  utils.py  validator.py
kibune/pysigma/factories/: detection.py  rule.py
kibune/pysigma/schemas/: __init__.py
kibune/schemas/: __init__.py  emitter.py  event.py  log.py  rule.py  utils.py
kibune/services/: __init__.py  emitter.py
kibune/templates/: alert.j2
tests/: conftest.py  settings.py  test_kibune.py
tests/fixtures/: all.yml  all_of.yml  all_of_them.yml  base64.yml  contains.yml  endswith.yml  selection.yml  startswith.yml  win_system_exe_anomaly.yml
tests/pysigma/: test_pysigma.py  test_scan.py  test_validator.py
tests/pysigma/rules/: test_all.py  test_all_of.py  test_all_of_them.py  test_base64.py  test_contains.py  test_endswith.py  test_selection.py  test_startswith.py
tests/schemas/: test_emitter.py  test_rule.py
tests/services/: test_emitter.py
(+7 files in other folders)
